--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -29,6 +29,11 @@ footer {
 	padding: 25px 0;
 }
 
+footer h2 {
+	padding: 0;
+	font-size: 20px;
+}
+
 h1 {
 	font-weight: normal;
 	padding: 35px 0 10px 0;
